--- a/app.html
+++ b/app.html
@@ -119,7 +119,7 @@
           data: { session },
         } = await supabase.auth.getSession();
         if (!session) {
-          window.location.href = "login.html";
+          window.location.href = "index.html";
         } else {
           await loadTransactions();
         }
@@ -127,7 +127,7 @@
 
       logoutBtn.addEventListener("click", async () => {
         await supabase.auth.signOut();
-        window.location.href = "login.html";
+        window.location.href = "index.html";
       });
 
       form.addEventListener("submit", async (e) => {
