--- a/app.html
+++ b/app.html
@@ -48,65 +48,56 @@
         margin-bottom: 4px;
       }
 
-      /* NEW - Hamburger menu styling */
-      .hamburger {
-        position: absolute;
-        top: 20px;
-        right: 20px;
+      .navbar {
         display: flex;
-        flex-direction: column;
-        width: 30px;
+        justify-content: flex-end;
+        margin-bottom: 10px;
+        position: relative;
+      }
+
+      .menu-icon {
+        font-size: 26px;
         cursor: pointer;
+        user-select: none;
+        padding: 10px;
+        background: #0288d1;
+        color: white;
+        border-radius: 6px;
       }
-      .bar {
-        height: 3px;
-        background-color: #333;
-        margin: 5px 0;
-        border-radius: 2px;
-      }
-      .menu {
+
+      .dropdown-menu {
         position: absolute;
-        top: 60px;
-        right: 20px;
+        right: 0;
+        top: 45px;
         background: white;
         border: 1px solid #ccc;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         border-radius: 6px;
+        padding: 10px;
         display: none;
-        flex-direction: column;
-        min-width: 120px;
-        z-index: 1000;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       }
-      .menu.show {
-        display: flex;
-      }
-      .menu button {
-        background: none;
+
+      #logoutBtn {
+        background: #f44336;
+        color: white;
         border: none;
-        padding: 12px;
-        text-align: left;
-        font-size: 1em;
-        cursor: pointer;
-      }
-      .menu button:hover {
-        background: #f0f0f0;
+        border-radius: 5px;
+        width: 100%;
+        padding: 10px;
+        font-weight: bold;
+        font-size: 1.1em;
       }
     </style>
   </head>
   <body>
+    <div class="navbar">
+      <div class="menu-icon" id="menuToggle">&#9776;</div>
+      <div class="dropdown-menu" id="dropdownMenu">
+        <button id="logoutBtn">Log Out</button>
+      </div>
+    </div>
+
     <h1>Transaction Tracker</h1>
-
-    <!-- NEW - Hamburger menu toggle -->
-    <div class="hamburger" id="hamburger">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-    </div>
-
-    <!-- NEW - Dropdown menu -->
-    <div class="menu" id="menu">
-      <button id="logoutBtn">Log Out</button>
-    </div>
 
     <form id="transactionForm">
       <input
@@ -143,7 +134,6 @@
     <div class="transactions" id="transactionList"></div>
 
     <script>
-      // TODO: Replace with your own Supabase URL and anon key
       const SUPABASE_URL = "https://keeumcpbteamhbnypuqa.supabase.co";
       const SUPABASE_ANON_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtlZXVtY3BidGVhbWhibnlwdXFhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTI3MDU0NDYsImV4cCI6MjA2ODI4MTQ0Nn0.Ix1bgVR5D_2qgtDljJsP8N2-kpXmpZ-l-JRSJC3JG8s";
@@ -155,15 +145,7 @@
       const monthSelect = document.getElementById("monthSelect");
       const transactionList = document.getElementById("transactionList");
 
-      const hamburger = document.getElementById("hamburger");
-      const menu = document.getElementById("menu");
-
       let transactions = [];
-
-      // Toggle menu
-      hamburger.addEventListener("click", () => {
-        menu.classList.toggle("show");
-      });
 
       async function checkAuth() {
         const {
@@ -179,6 +161,11 @@
       logoutBtn.addEventListener("click", async () => {
         await supabase.auth.signOut();
         window.location.href = "index.html";
+      });
+
+      document.getElementById("menuToggle").addEventListener("click", () => {
+        const menu = document.getElementById("dropdownMenu");
+        menu.style.display = menu.style.display === "block" ? "none" : "block";
       });
 
       form.addEventListener("submit", async (e) => {
