Fixed login issues and hamburger menu.

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
     <script type="module">
       import { createClient } from "https://esm.sh/@supabase/supabase-js";
 
-      const SUPABASE_URL = "https://your-project-id.supabase.co"; // Replace with your actual Supabase URL
-      const SUPABASE_ANON_KEY = "your-anon-key"; // Replace with your actual anon key
+      const SUPABASE_URL = "https://keeumcpbteamhbnypuqa.supabase.co";
+      const SUPABASE_ANON_KEY =
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtlZXVtY3BidGVhbWhibnlwdXFhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTI3MDU0NDYsImV4cCI6MjA2ODI4MTQ0Nn0.Ix1bgVR5D_2qgtDljJsP8N2-kpXmpZ-l-JRSJC3JG8s";
 
       const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
