--- a/app.html
+++ b/app.html
@@ -3,305 +3,128 @@
   <head>
     <meta charset="UTF-8" />
     <title>Transaction Tracker</title>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
-        font-family: Arial, sans-serif;
-        background: #f4f7fa;
-        padding: 40px;
-        max-width: 800px;
-        margin: auto;
-      }
-      h1,
-      h2 {
-        text-align: center;
-      }
-      form,
-      .transactions,
-      #monthSelectContainer {
-        background: white;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px #ccc;
-        margin-bottom: 30px;
-      }
-      input,
-      button,
-      select {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-        font-size: 1em;
-      }
-      button {
-        cursor: pointer;
-      }
-      .category-group {
-        background: #eef6fb;
-        padding: 10px 15px;
-        margin-top: 10px;
-        border-left: 4px solid #0288d1;
-        border-radius: 6px;
-      }
-      .transaction {
-        padding-left: 10px;
-        margin-bottom: 4px;
+        font-family: sans-serif;
+        margin: 0;
+        background-color: #f8f9fa;
       }
 
+      /* Navbar */
       .navbar {
+        background-color: #007bff;
+        color: white;
+        padding: 1rem;
         display: flex;
-        justify-content: flex-end;
-        margin-bottom: 10px;
+        justify-content: space-between;
+        align-items: center;
         position: relative;
       }
 
-      .menu-icon {
-        font-size: 26px;
-        cursor: pointer;
-        user-select: none;
-        padding: 10px;
-        background: #0288d1;
-        color: white;
-        border-radius: 6px;
+      .navbar h1 {
+        margin: 0;
+        font-size: 1.25rem;
       }
 
-      .dropdown-menu {
+      .hamburger {
+        font-size: 1.5rem;
+        cursor: pointer;
+        background: none;
+        border: none;
+        color: white;
+      }
+
+      .dropdown {
+        display: none;
         position: absolute;
-        right: 0;
-        top: 45px;
+        top: 60px;
+        right: 10px;
         background: white;
         border: 1px solid #ccc;
-        border-radius: 6px;
-        padding: 10px;
-        display: none;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        border-radius: 4px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        z-index: 10;
+        min-width: 120px;
       }
 
-      #logoutBtn {
-        background: #f44336;
-        color: white;
-        border: none;
-        border-radius: 5px;
+      .dropdown button {
         width: 100%;
-        padding: 10px;
-        font-weight: bold;
-        font-size: 1.1em;
+        padding: 0.6rem;
+        background: none;
+        border: none;
+        text-align: left;
+        cursor: pointer;
+        font-size: 1rem;
+      }
+
+      .dropdown button:hover {
+        background-color: #f0f0f0;
+      }
+
+      /* Example content area */
+      .container {
+        padding: 2rem;
       }
     </style>
   </head>
+
   <body>
     <div class="navbar">
-      <div class="menu-icon" id="menuToggle">&#9776;</div>
-      <div class="dropdown-menu" id="dropdownMenu">
-        <button id="logoutBtn">Log Out</button>
+      <h1>Transaction Tracker</h1>
+      <button class="hamburger" id="menuBtn">&#9776;</button>
+      <div class="dropdown" id="dropdownMenu">
+        <button id="logoutBtn">Logout</button>
       </div>
     </div>
 
-    <h1>Transaction Tracker</h1>
-
-    <form id="transactionForm">
-      <input
-        type="text"
-        id="location"
-        placeholder="Where was the purchase?"
-        required
-      />
-      <input
-        type="text"
-        id="category"
-        placeholder="Category (e.g. Groceries, Gas)"
-        required
-      />
-      <input
-        type="number"
-        id="amount"
-        placeholder="Amount ($)"
-        step="0.01"
-        min="0"
-        required
-      />
-      <input type="date" id="date" required />
-      <button type="submit">Add Transaction</button>
-    </form>
-
-    <div id="monthSelectContainer">
-      <label for="monthSelect"><strong>Select Month:</strong></label>
-      <select id="monthSelect">
-        <option value="">-- Select a month --</option>
-      </select>
+    <div class="container">
+      <!-- Your main app content goes here -->
+      <p>Welcome! This is your secured app page.</p>
+      <!-- You can replace this with your transaction form, list, etc. -->
     </div>
 
-    <div class="transactions" id="transactionList"></div>
+    <script type="module">
+      import { createClient } from "https://esm.sh/@supabase/supabase-js";
 
-    <script>
+      // 🔐 Replace with your actual values from Supabase
       const SUPABASE_URL = "https://keeumcpbteamhbnypuqa.supabase.co";
       const SUPABASE_ANON_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtlZXVtY3BidGVhbWhibnlwdXFhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTI3MDU0NDYsImV4cCI6MjA2ODI4MTQ0Nn0.Ix1bgVR5D_2qgtDljJsP8N2-kpXmpZ-l-JRSJC3JG8s";
 
-      const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+      const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-      const logoutBtn = document.getElementById("logoutBtn");
-      const form = document.getElementById("transactionForm");
-      const monthSelect = document.getElementById("monthSelect");
-      const transactionList = document.getElementById("transactionList");
+      // Toggle dropdown menu
+      const menuBtn = document.getElementById("menuBtn");
+      const dropdownMenu = document.getElementById("dropdownMenu");
 
-      let transactions = [];
+      menuBtn.addEventListener("click", () => {
+        dropdownMenu.style.display =
+          dropdownMenu.style.display === "block" ? "none" : "block";
+      });
 
-      async function checkAuth() {
-        const {
-          data: { session },
-        } = await supabase.auth.getSession();
-        if (!session) {
-          window.location.href = "index.html";
-        } else {
-          await loadTransactions();
+      // Close dropdown if user clicks outside of it
+      window.addEventListener("click", (e) => {
+        if (!menuBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
+          dropdownMenu.style.display = "none";
         }
-      }
+      });
 
+      // Logout logic
+      const logoutBtn = document.getElementById("logoutBtn");
       logoutBtn.addEventListener("click", async () => {
         await supabase.auth.signOut();
-        window.location.href = "index.html";
+        window.location.href = "login.html";
       });
 
-      document.getElementById("menuToggle").addEventListener("click", () => {
-        const menu = document.getElementById("dropdownMenu");
-        menu.style.display = menu.style.display === "block" ? "none" : "block";
-      });
+      // Redirect to login if user is not authenticated
+      const {
+        data: { session },
+      } = await supabase.auth.getSession();
 
-      form.addEventListener("submit", async (e) => {
-        e.preventDefault();
-
-        const location = document.getElementById("location").value.trim();
-        const category = document.getElementById("category").value.trim();
-        const amount = parseFloat(document.getElementById("amount").value);
-        const date = document.getElementById("date").value;
-
-        if (!location || !category || isNaN(amount) || !date)
-          return alert("Please fill all fields correctly.");
-
-        const { data: user } = await supabase.auth.getUser();
-        if (!user) return alert("User not logged in.");
-
-        const { error } = await supabase
-          .from("transactions")
-          .insert([{ location, category, amount, date, user_id: user.id }]);
-
-        if (error) {
-          alert("Error adding transaction: " + error.message);
-        } else {
-          form.reset();
-          await loadTransactions();
-        }
-      });
-
-      monthSelect.addEventListener("change", () => {
-        renderTransactions();
-      });
-
-      function formatMonthKey(dateStr) {
-        const d = new Date(dateStr);
-        return `${d.getFullYear()}-${String(d.getMonth() + 1).padStart(
-          2,
-          "0"
-        )}`;
+      if (!session) {
+        window.location.href = "login.html";
       }
-
-      function formatMonthYear(dateStr) {
-        const options = { year: "numeric", month: "long" };
-        const d = new Date(dateStr);
-        return d.toLocaleDateString(undefined, options);
-      }
-
-      async function loadTransactions() {
-        const { data: user } = await supabase.auth.getUser();
-        if (!user) return;
-
-        const { data, error } = await supabase
-          .from("transactions")
-          .select()
-          .eq("user_id", user.id)
-          .order("date", { ascending: false });
-
-        if (error) {
-          alert("Error loading transactions: " + error.message);
-          return;
-        }
-
-        transactions = data || [];
-
-        populateMonthDropdown();
-        renderTransactions();
-      }
-
-      function populateMonthDropdown() {
-        const monthSet = new Set(
-          transactions.map((tx) => formatMonthKey(tx.date))
-        );
-        const sortedMonths = Array.from(monthSet).sort().reverse();
-
-        monthSelect.innerHTML =
-          '<option value="">-- Select a month --</option>';
-        sortedMonths.forEach((monthKey) => {
-          const option = document.createElement("option");
-          option.value = monthKey;
-          option.textContent = formatMonthYear(monthKey + "-01");
-          monthSelect.appendChild(option);
-        });
-
-        if (sortedMonths.length > 0) {
-          monthSelect.value = sortedMonths[0];
-        }
-      }
-
-      function renderTransactions() {
-        const selectedMonth = monthSelect.value;
-        transactionList.innerHTML = "";
-
-        if (!selectedMonth) {
-          transactionList.innerHTML =
-            '<p style="text-align:center;">Please select a month.</p>';
-          return;
-        }
-
-        const filtered = transactions.filter(
-          (tx) => formatMonthKey(tx.date) === selectedMonth
-        );
-
-        if (filtered.length === 0) {
-          transactionList.innerHTML =
-            '<p style="text-align:center;">No transactions for this month.</p>';
-          return;
-        }
-
-        const grouped = filtered.reduce((acc, tx) => {
-          if (!acc[tx.category]) acc[tx.category] = [];
-          acc[tx.category].push(tx);
-          return acc;
-        }, {});
-
-        for (const cat in grouped) {
-          const total = grouped[cat]
-            .reduce((sum, t) => sum + t.amount, 0)
-            .toFixed(2);
-
-          const catDiv = document.createElement("div");
-          catDiv.className = "category-group";
-          catDiv.innerHTML = `<h3>${cat} - Total: $${total}</h3>`;
-
-          grouped[cat].forEach((tx) => {
-            const txDiv = document.createElement("div");
-            txDiv.className = "transaction";
-            txDiv.textContent = `${tx.date}: ${
-              tx.location
-            } - $${tx.amount.toFixed(2)}`;
-            catDiv.appendChild(txDiv);
-          });
-
-          transactionList.appendChild(catDiv);
-        }
-      }
-
-      checkAuth();
     </script>
   </body>
 </html>
