--- a/app.html
+++ b/app.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
-        font-family: sans-serif;
+        font-family: Arial, sans-serif;
         margin: 0;
         background-color: #f8f9fa;
+        max-width: 900px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 1rem;
       }
 
       /* Navbar */
@@ -20,15 +24,17 @@
         justify-content: space-between;
         align-items: center;
         position: relative;
+        border-radius: 6px;
+        margin-bottom: 1rem;
       }
 
       .navbar h1 {
         margin: 0;
-        font-size: 1.25rem;
+        font-size: 1.5rem;
       }
 
       .hamburger {
-        font-size: 1.5rem;
+        font-size: 1.8rem;
         cursor: pointer;
         background: none;
         border: none;
@@ -50,7 +56,7 @@
 
       .dropdown button {
         width: 100%;
-        padding: 0.6rem;
+        padding: 0.6rem 1rem;
         background: none;
         border: none;
         text-align: left;
@@ -62,9 +68,59 @@
         background-color: #f0f0f0;
       }
 
-      /* Example content area */
-      .container {
-        padding: 2rem;
+      /* Form and UI */
+      form,
+      #monthSelectContainer,
+      .transactions {
+        background: white;
+        padding: 1rem 1.5rem;
+        border-radius: 8px;
+        box-shadow: 0 0 10px #ccc;
+        margin-bottom: 1.5rem;
+      }
+
+      form input,
+      form select,
+      form button {
+        width: 100%;
+        padding: 0.6rem;
+        margin: 0.6rem 0;
+        font-size: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
+
+      form button {
+        background-color: #007bff;
+        color: white;
+        border: none;
+        cursor: pointer;
+        font-weight: bold;
+      }
+
+      form button:hover {
+        background-color: #0056b3;
+      }
+
+      .category-group {
+        background: #eef6fb;
+        padding: 0.8rem 1rem;
+        margin-top: 1rem;
+        border-left: 4px solid #0288d1;
+        border-radius: 6px;
+      }
+
+      .transaction {
+        padding-left: 0.8rem;
+        margin-bottom: 0.3rem;
+        font-size: 0.95rem;
+      }
+
+      /* Center message */
+      .center-text {
+        text-align: center;
+        color: #555;
+        margin-top: 1rem;
       }
     </style>
   </head>
@@ -72,29 +128,58 @@
   <body>
     <div class="navbar">
       <h1>Transaction Tracker</h1>
-      <button class="hamburger" id="menuBtn">&#9776;</button>
+      <button class="hamburger" id="menuBtn" aria-label="Menu">&#9776;</button>
       <div class="dropdown" id="dropdownMenu">
         <button id="logoutBtn">Logout</button>
       </div>
     </div>
 
-    <div class="container">
-      <!-- Your main app content goes here -->
-      <p>Welcome! This is your secured app page.</p>
-      <!-- You can replace this with your transaction form, list, etc. -->
+    <form id="transactionForm">
+      <input
+        type="text"
+        id="location"
+        placeholder="Where was the purchase?"
+        required
+        autocomplete="off"
+      />
+      <input
+        type="text"
+        id="category"
+        placeholder="Category (e.g., Groceries, Gas)"
+        required
+        autocomplete="off"
+      />
+      <input
+        type="number"
+        id="amount"
+        placeholder="Amount ($)"
+        step="0.01"
+        min="0"
+        required
+      />
+      <input type="date" id="date" required />
+      <button type="submit">Add Transaction</button>
+    </form>
+
+    <div id="monthSelectContainer">
+      <label for="monthSelect"><strong>Select Month:</strong></label>
+      <select id="monthSelect">
+        <option value="">-- Select a month --</option>
+      </select>
     </div>
+
+    <div class="transactions" id="transactionList"></div>
 
     <script type="module">
       import { createClient } from "https://esm.sh/@supabase/supabase-js";
 
-      // 🔐 Replace with your actual values from Supabase
       const SUPABASE_URL = "https://keeumcpbteamhbnypuqa.supabase.co";
       const SUPABASE_ANON_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtlZXVtY3BidGVhbWhibnlwdXFhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTI3MDU0NDYsImV4cCI6MjA2ODI4MTQ0Nn0.Ix1bgVR5D_2qgtDljJsP8N2-kpXmpZ-l-JRSJC3JG8s";
 
       const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-      // Toggle dropdown menu
+      // Hamburger menu toggle
       const menuBtn = document.getElementById("menuBtn");
       const dropdownMenu = document.getElementById("dropdownMenu");
 
@@ -103,28 +188,198 @@
           dropdownMenu.style.display === "block" ? "none" : "block";
       });
 
-      // Close dropdown if user clicks outside of it
       window.addEventListener("click", (e) => {
         if (!menuBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
           dropdownMenu.style.display = "none";
         }
       });
 
-      // Logout logic
+      // Logout
       const logoutBtn = document.getElementById("logoutBtn");
       logoutBtn.addEventListener("click", async () => {
         await supabase.auth.signOut();
         window.location.href = "login.html";
       });
 
-      // Redirect to login if user is not authenticated
-      const {
-        data: { session },
-      } = await supabase.auth.getSession();
-
-      if (!session) {
-        window.location.href = "login.html";
+      // Check auth session, redirect if no session
+      async function checkAuth() {
+        const {
+          data: { session },
+        } = await supabase.auth.getSession();
+        if (!session) {
+          window.location.href = "login.html";
+        }
       }
+
+      checkAuth();
+
+      const form = document.getElementById("transactionForm");
+      const monthSelect = document.getElementById("monthSelect");
+      const transactionList = document.getElementById("transactionList");
+
+      let transactions = [];
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        const location = document.getElementById("location").value.trim();
+        const category = document.getElementById("category").value.trim();
+        const amount = parseFloat(document.getElementById("amount").value);
+        const date = document.getElementById("date").value;
+
+        if (!location || !category || isNaN(amount) || !date) {
+          alert("Please fill out all fields correctly.");
+          return;
+        }
+
+        const {
+          data: { user },
+        } = await supabase.auth.getUser();
+
+        if (!user) {
+          alert("You are not logged in.");
+          window.location.href = "login.html";
+          return;
+        }
+
+        // Insert transaction to Supabase table "transactions"
+        const { error } = await supabase.from("transactions").insert([
+          {
+            location,
+            category,
+            amount,
+            date,
+            user_id: user.id,
+          },
+        ]);
+
+        if (error) {
+          alert("Error adding transaction: " + error.message);
+        } else {
+          form.reset();
+          await loadTransactions();
+        }
+      });
+
+      monthSelect.addEventListener("change", () => {
+        renderTransactions();
+      });
+
+      // Format YYYY-MM for month key
+      function formatMonthKey(dateStr) {
+        const d = new Date(dateStr);
+        return `${d.getFullYear()}-${String(d.getMonth() + 1).padStart(
+          2,
+          "0"
+        )}`;
+      }
+
+      // Format month nicely, e.g. "January 2025"
+      function formatMonthYear(dateStr) {
+        const options = { year: "numeric", month: "long" };
+        const d = new Date(dateStr);
+        return d.toLocaleDateString(undefined, options);
+      }
+
+      async function loadTransactions() {
+        const {
+          data: { user },
+        } = await supabase.auth.getUser();
+
+        if (!user) {
+          window.location.href = "login.html";
+          return;
+        }
+
+        // Fetch transactions for this user
+        const { data, error } = await supabase
+          .from("transactions")
+          .select()
+          .eq("user_id", user.id)
+          .order("date", { ascending: false });
+
+        if (error) {
+          alert("Error loading transactions: " + error.message);
+          return;
+        }
+
+        transactions = data || [];
+
+        populateMonthDropdown();
+        renderTransactions();
+      }
+
+      function populateMonthDropdown() {
+        const monthsSet = new Set(
+          transactions.map((tx) => formatMonthKey(tx.date))
+        );
+        const monthsSorted = Array.from(monthsSet).sort().reverse();
+
+        monthSelect.innerHTML =
+          '<option value="">-- Select a month --</option>';
+        monthsSorted.forEach((month) => {
+          const option = document.createElement("option");
+          option.value = month;
+          option.textContent = formatMonthYear(month + "-01");
+          monthSelect.appendChild(option);
+        });
+
+        if (monthsSorted.length > 0) {
+          monthSelect.value = monthsSorted[0];
+        }
+      }
+
+      function renderTransactions() {
+        const selectedMonth = monthSelect.value;
+        transactionList.innerHTML = "";
+
+        if (!selectedMonth) {
+          transactionList.innerHTML =
+            '<p class="center-text">Please select a month to see transactions.</p>';
+          return;
+        }
+
+        const filtered = transactions.filter(
+          (tx) => formatMonthKey(tx.date) === selectedMonth
+        );
+
+        if (filtered.length === 0) {
+          transactionList.innerHTML =
+            '<p class="center-text">No transactions for this month.</p>';
+          return;
+        }
+
+        // Group by category
+        const grouped = filtered.reduce((acc, tx) => {
+          if (!acc[tx.category]) acc[tx.category] = [];
+          acc[tx.category].push(tx);
+          return acc;
+        }, {});
+
+        for (const category in grouped) {
+          const total = grouped[category]
+            .reduce((sum, tx) => sum + tx.amount, 0)
+            .toFixed(2);
+
+          const catDiv = document.createElement("div");
+          catDiv.className = "category-group";
+          catDiv.innerHTML = `<h3>${category} - Total: $${total}</h3>`;
+
+          grouped[category].forEach((tx) => {
+            const txDiv = document.createElement("div");
+            txDiv.className = "transaction";
+            txDiv.textContent = `${tx.date}: ${
+              tx.location
+            } - $${tx.amount.toFixed(2)}`;
+            catDiv.appendChild(txDiv);
+          });
+
+          transactionList.appendChild(catDiv);
+        }
+      }
+
+      // Initial load
+      loadTransactions();
     </script>
   </body>
 </html>
