--- a/app.html
+++ b/app.html
@@ -316,11 +316,7 @@
 
       // Format YYYY-MM for month key
       function formatMonthKey(dateStr) {
-        const d = new Date(dateStr);
-        return `${d.getFullYear()}-${String(d.getMonth() + 1).padStart(
-          2,
-          "0"
-        )}`;
+        return dateStr.slice(0, 7); // "YYYY-MM"
       }
 
       // Format month nicely, e.g. "January 2025"
