--- a/app.html
+++ b/app.html
@@ -8,10 +8,17 @@
       body {
         font-family: Arial, sans-serif;
         margin: 0;
+        padding: 0;
         background-color: #f8f9fa;
         max-width: 900px;
         margin-left: auto;
         margin-right: auto;
+        padding: 1rem;
+      }
+
+      #mainContainer {
+        max-width: 1200px;
+        margin: 0 auto;
         padding: 1rem;
       }
 
@@ -207,71 +214,75 @@
   </head>
 
   <body>
-    <div class="navbar">
-      <h1>Transaction Tracker</h1>
-      <button class="hamburger" id="menuBtn" aria-label="Menu">&#9776;</button>
-      <div class="dropdown" id="dropdownMenu">
-        <button id="logoutBtn">Logout</button>
+    <div id="mainContainer">
+      <div class="navbar">
+        <h1>Transaction Tracker</h1>
+        <button class="hamburger" id="menuBtn" aria-label="Menu">
+          &#9776;
+        </button>
+        <div class="dropdown" id="dropdownMenu">
+          <button id="logoutBtn">Logout</button>
+        </div>
       </div>
-    </div>
 
-    <form id="transactionForm">
-      <input
-        type="text"
-        id="location"
-        placeholder="Where was the purchase?"
-        required
-        autocomplete="off"
-      />
-      <input
-        type="text"
-        id="category"
-        placeholder="Category (e.g., Groceries, Gas)"
-        required
-        autocomplete="off"
-      />
-      <input
-        type="number"
-        id="amount"
-        placeholder="Amount ($)"
-        step="0.01"
-        min="0"
-        required
-      />
-      <input type="date" id="date" required />
-      <button type="submit">Add Transaction</button>
-    </form>
+      <form id="transactionForm">
+        <input
+          type="text"
+          id="location"
+          placeholder="Where was the purchase?"
+          required
+          autocomplete="off"
+        />
+        <input
+          type="text"
+          id="category"
+          placeholder="Category (e.g., Groceries, Gas)"
+          required
+          autocomplete="off"
+        />
+        <input
+          type="number"
+          id="amount"
+          placeholder="Amount ($)"
+          step="0.01"
+          min="0"
+          required
+        />
+        <input type="date" id="date" required />
+        <button type="submit">Add Transaction</button>
+      </form>
 
-    <div id="monthSelectContainer">
-      <label for="monthSelect"><strong>Select Month:</strong></label>
-      <select id="monthSelect">
-        <option value="">-- Select a month --</option>
-      </select>
-    </div>
-
-    <div style="text-align: right; margin-bottom: 1rem">
-      <button
-        id="exportBtn"
-        style="
-          background-color: #28a745;
-          color: white;
-          padding: 0.5rem 1rem;
-          border: none;
-          border-radius: 4px;
-          cursor: pointer;
-          font-weight: bold;
-        "
-      >
-        Export CSV
-      </button>
-    </div>
-
-    <div id="contentContainer">
-      <div id="transactionsSection">
-        <div id="transactionList"></div>
+      <div id="monthSelectContainer">
+        <label for="monthSelect"><strong>Select Month:</strong></label>
+        <select id="monthSelect">
+          <option value="">-- Select a month --</option>
+        </select>
       </div>
-      <div id="chartSection">
-        <canvas id="categoryChart" width="400" height="400"></canvas>
+
+      <div style="text-align: right; margin-bottom: 1rem">
+        <button
+          id="exportBtn"
+          style="
+            background-color: #28a745;
+            color: white;
+            padding: 0.5rem 1rem;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-weight: bold;
+          "
+        >
+          Export CSV
+        </button>
+      </div>
+
+      <div id="contentContainer">
+        <div id="transactionsSection">
+          <div id="transactionList"></div>
+        </div>
+        <div id="chartSection">
+          <canvas id="categoryChart" width="400" height="400"></canvas>
+        </div>
       </div>
     </div>
 
