--- a/app.html
+++ b/app.html
@@ -26,7 +26,7 @@
         width: 100%;
         background-color: #007bff;
         color: white;
-        padding: 1rem;
+        padding: 1rem 1.5rem 1rem 1rem; /* top/right/bottom/left */
         display: flex;
         justify-content: space-between;
         align-items: center;
