--- a/app.html
+++ b/app.html
@@ -10,6 +10,7 @@
         margin: 0;
         padding: 0;
         background-color: #f8f9fa;
+        overflow-y: scroll; /* Forces scrollbar to always be present */
       }
 
       #mainContainer {
