--- a/app.html
+++ b/app.html
@@ -46,6 +46,7 @@
         background: none;
         border: none;
         color: white;
+        margin-right: 0.5rem;
       }
 
       .dropdown {
