--- a/reset-password.html
+++ b/reset-password.html
@@ -72,8 +72,8 @@
 
     <script>
       const supabase = supabase.createClient(
-        "https://YOUR_PROJECT.supabase.co",
-        "YOUR_PUBLIC_ANON_KEY"
+        "https://keeumcpbteamhbnypuqa.supabase.co",
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtlZXVtY3BidGVhbWhibnlwdXFhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTI3MDU0NDYsImV4cCI6MjA2ODI4MTQ0Nn0.Ix1bgVR5D_2qgtDljJsP8N2-kpXmpZ-l-JRSJC3JG8s"
       );
 
       async function updatePassword() {
@@ -100,7 +100,7 @@
 
           // Redirect after 2 seconds
           setTimeout(() => {
-            window.location.href = "/login.html"; // change to your actual login or dashboard page
+            window.location.href = "/transaction-tracker/"; // change to your actual login or dashboard page
           }, 2000);
         }
       }
