--- a/app.html
+++ b/app.html
@@ -46,7 +46,7 @@
         background: none;
         border: none;
         color: white;
-        margin-right: 1.5rem;
+        margin-right: 0.5rem;
       }
 
       .dropdown {
@@ -301,7 +301,7 @@
       const logoutBtn = document.getElementById("logoutBtn");
       logoutBtn.addEventListener("click", async () => {
         await supabase.auth.signOut();
-        window.location.href = "login.html";
+        window.location.href = "/transaction-tracker/";
       });
 
       // Check auth session, redirect if no session
@@ -310,7 +310,7 @@
           data: { session },
         } = await supabase.auth.getSession();
         if (!session) {
-          window.location.href = "login.html";
+          window.location.href = "/transaction-tracker/";
         }
       }
 
@@ -768,7 +768,8 @@
         if (!email) return;
 
         const { error } = await supabase.auth.resetPasswordForEmail(email, {
-          redirectTo: window.location.origin + "/reset-password.html",
+          redirectTo:
+            window.location.origin + "/transaction-tracker/reset-password.html",
         });
 
         if (error) {
