--- a/app.html
+++ b/app.html
@@ -46,7 +46,7 @@
         background: none;
         border: none;
         color: white;
-        margin-right: 0.5rem;
+        margin-right: 1.5rem;
       }
 
       .dropdown {
@@ -219,13 +219,19 @@
           required
           autocomplete="off"
         />
-        <input
-          type="text"
-          id="category"
-          placeholder="Category (e.g., Groceries, Gas)"
-          required
-          autocomplete="off"
-        />
+        <select id="categorySelect" required>
+          <option value="">-- Select Category --</option>
+          <option value="Groceries">Groceries</option>
+          <option value="Entertainment">Entertainment</option>
+          <option value="Home Improvement">Home Improvement</option>
+          <option value="Utilities">Utilities</option>
+          <option value="Subscriptions">Subscriptions</option>
+          <option value="Home Supplies">Home Supplies</option>
+          <option value="Gas">Gas</option>
+          <option value="Gift">Gift</option>
+          <option value="Kids Stuff">Kids Stuff</option>
+          <option value="Eat Out">Eat Out</option>
+        </select>
         <input
           type="number"
           id="amount"
@@ -281,6 +287,19 @@
 
       const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
       let categoryChart = null;
+      const categoryColors = {
+        Groceries: "#FF6384",
+        Entertainment: "#36A2EB",
+        "Home Improvement": "#FFCE56",
+        Utilities: "#4BC0C0",
+        Subscriptions: "#9966FF",
+        "Home Supplies": "#FF9F40",
+        Gas: "#E7E9ED",
+        Gift: "#66BB6A",
+        "Kids Stuff": "#FF6F61",
+        "Eat Out": "#A569BD",
+        Uncategorized: "#D3D3D3",
+      };
 
       // Hamburger menu toggle
       const menuBtn = document.getElementById("menuBtn");
@@ -326,7 +345,7 @@
         e.preventDefault();
 
         const location = document.getElementById("location").value.trim();
-        const category = document.getElementById("category").value.trim();
+        const category = document.getElementById("categorySelect").value.trim();
         const amount = parseFloat(document.getElementById("amount").value);
         const date = document.getElementById("date").value;
 
@@ -515,21 +534,18 @@
             (categoryTotals[category] || 0) + tx.amount;
         });
 
+        const labels = Object.keys(categoryTotals);
+        const dataValues = Object.values(categoryTotals);
+        const backgroundColors = labels.map(
+          (label) => categoryColors[label] || "#cccccc"
+        );
+
         const data = {
-          labels: Object.keys(categoryTotals),
+          labels: labels,
           datasets: [
             {
-              data: Object.values(categoryTotals),
-              backgroundColor: [
-                "#FF6384",
-                "#36A2EB",
-                "#FFCE56",
-                "#4BC0C0",
-                "#9966FF",
-                "#FF9F40",
-                "#E7E9ED",
-                "#66BB6A",
-              ],
+              data: dataValues,
+              backgroundColor: backgroundColors,
             },
           ],
         };
@@ -615,34 +631,31 @@
         amountInput.className = "inline-edit";
         amountInput.value = tx.amount;
 
-        const categoryInput = document.createElement("input");
-        categoryInput.type = "text";
-        categoryInput.className = "inline-edit";
-        categoryInput.placeholder = "e.g. Groceries";
-        categoryInput.value = tx.category || "";
-
-        // Autocomplete datalist for recent categories
-        const categoryListId = "category-suggestions";
-        categoryInput.setAttribute("list", categoryListId);
-
-        const datalist = document.createElement("datalist");
-        datalist.id = categoryListId;
-
-        const uniqueCategories = [
-          ...new Set(transactions.map((t) => t.category).filter(Boolean)),
-        ].sort();
-
-        uniqueCategories.forEach((cat) => {
+        const categorySelect = document.createElement("select");
+        [
+          "Groceries",
+          "Entertainment",
+          "Home Improvement",
+          "Utilities",
+          "Subscriptions",
+          "Home Supplies",
+          "Gas",
+          "Gift",
+          "Kids Stuff",
+          "Eat Out",
+        ].forEach((cat) => {
           const option = document.createElement("option");
           option.value = cat;
-          datalist.appendChild(option);
+          option.textContent = cat;
+          if (tx.category === cat) option.selected = true;
+          categorySelect.appendChild(option);
         });
 
         // Append all inputs
         detailsDiv.appendChild(dateInput);
         detailsDiv.appendChild(locationInput);
         detailsDiv.appendChild(amountInput);
-        detailsDiv.appendChild(categoryInput);
+        detailsDiv.appendChild(categorySelect);
         detailsDiv.appendChild(datalist); // append datalist to make autocomplete work
 
         const actionsDiv = document.createElement("div");
@@ -676,15 +689,6 @@
             alert("Please fill out all fields correctly.");
             return;
           }
-
-          // Capitalize each word in category
-          const formatCategory = (text) =>
-            text
-              .trim()
-              .toLowerCase()
-              .replace(/\b\w/g, (char) => char.toUpperCase());
-
-          const formattedCategory = formatCategory(categoryInput.value);
 
           const { error } = await supabase
             .from("transactions")
