--- a/app.html
+++ b/app.html
@@ -231,6 +231,7 @@
           <option value="Gift">Gift</option>
           <option value="Kids Stuff">Kids Stuff</option>
           <option value="Eat Out">Eat Out</option>
+          <option value="Mortgage">Mortgage</option>
         </select>
         <input
           type="number"
@@ -298,6 +299,7 @@
         Gift: "#66BB6A",
         "Kids Stuff": "#FF6F61",
         "Eat Out": "#A569BD",
+        Mortgage: "#2E86C1",
         Uncategorized: "#D3D3D3",
       };
 
@@ -643,6 +645,7 @@
           "Gift",
           "Kids Stuff",
           "Eat Out",
+          "Mortgage",
         ].forEach((cat) => {
           const option = document.createElement("option");
           option.value = cat;
