Updated to add a total for the month.

--- a/app.html
+++ b/app.html
@@ -79,6 +79,7 @@
       </div>
 
       <div id="contentContainer">
+        <div id="monthTotal" class="month-total"></div>
         <div id="transactionsSection">
           <div id="transactionList"></div>
         </div>
